--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "tailwindcss": "3.3.2",
     "tw-elements": "^1.0.0-beta2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3"
   }
 }
